--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Jayant Kumar</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="imgs/img/favicon.ico" />
         
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Googl fonts-->
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">JayantKumar</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets\Jayant_photo.jpeg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="imgs\Jayant_photo.jpeg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +67,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets\DTU.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <img src="imgs\DTU.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
                             <h3 class="mb-0">Delhi Technological University</h3>
                             <div class="subheading mb-3">B.Tech in Mechanical Engineering With Specialization in Automotive Engineering| CGPA: 8.95</div>
                             <p></p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets\Deloitte.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <img src="imgs\Deloitte.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
                             <h3 class="mb-0">SA&MA (Analytics & Cognitive) Intern</h3>
                             <div class="subheading mb-3">Deloitte Touche Tohmatsu India, LLP</div>
                             <ul>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets\ismile.jfif"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <img src="imgs\ismile.jfif"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
                             <h3 class="mb-0">Data Science Intern</h3>
                             <div class="subheading mb-3">iSmile Technologies</div>
                             <ul>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets\PVM.png"  width="76" height="62" align="left" style = "padding-right: 10px;"/></img>
+                            <img src="imgs\PVM.png"  width="76" height="62" align="left" style = "padding-right: 10px;"/></img>
                             <h3 class="mb-0">Summer Intern</h3>
                             <div class="subheading mb-3">Perfetti Van Melle India</div>
                             <ul>
@@ -146,7 +146,7 @@
                     <h2 class="mb-5">Leadership</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets\DTU_SMV.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <img src="imgs\DTU_SMV.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
                             <h3 class="mb-0">Head - Steering and Brakes Department</h3>
                             <div class="subheading mb-3">DTU Supermileage Vehicle</div>
                             <ul>
