--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jayant Kumar</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="imgs\Jayant_photo.jpeg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="imgs\Jayant.jpeg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -43,14 +43,14 @@
                         <span class="text-primary">Kumar</span>
                     </h1>
                     <div class="subheading mb-5">
-                        +91-9354672286 | 
+                        +1 510 - 994 6106 | 
                         <a href="mailto:jayantvegito@gmail.com">jayantvegito@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a senior undergrad with a major in Mechanical engineering and have an interest in unlocking programming applications 
                         of Machine Learning, Computer Vision and Deep Learning. I'm a determined, consistent learner and enjoy working in a team 
                         with dreams to explore positive socioeconomic developments with my knowledge and skills.</p>
                     <div class="butn">
-                        <a href="https://drive.google.com/file/d/1UIeknd-XQmgpA4E7uDePGKXvA8k36vj4/view?usp=sharing"><button>CV</button></a>   
+                        <a href="https://drive.google.com/file/d/1u-3SZ8S36PrO-joGzJYAhJ-L36R-455h/view?usp=share_link"><button>CV</button></a>   
                     </div>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jayant1408/"><i class="fab fa-linkedin-in"></i></a>
@@ -86,6 +86,29 @@
                             <ul>
                                 <li>Scholarship awarded for securing Rank 1 in the batch (2019)</li>
                             </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <img src="imgs\UC-Berkeley-Symbol.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <h3 class="mb-0">Delhi Technological University</h3>
+                            <div class="subheading mb-3">MEng in Mechanical Engineering (Control of Robotic & Autonomous Systems)| CGPA: 3.53</div>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <div>University Coursework</div>
+                            <p></p>
+                            <ul>
+                                <li>MECENG C231 A: Experiential Advanced Control Design I</li>
+                                <li>MECENG C231 B: Experiential Advanced Control Design II</li>
+                                <li>MECENG 206A: Introduction to Robotics</li>
+                                <li>MECENG 236C: Vehicle Dynamics & Controls</li>
+                                <li>MECENG 292B: Statistics and Data Science for Engineers</li>
+                                <li>ENGIN 295: Communication for Engineering Leaders</li>
+                                <li>ENGIN 270C: Teaming and Project Management</li>
+                            </ul>
+                            <div></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2022</span></div>
                     </div>
@@ -167,6 +190,45 @@
                     <h2 class="mb-5">Highlighted Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Autonomous Off-road Rover for Solar Power Plant Construction</h3>
+                            <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Cricket-Player-Image-Classsifier-Face-Detection-along-with-resemblance-to-the-cricket-player';"><u>Code</u></div>
+                            <ul>
+                                <li>Developed ROS package for camera-lidar sensor fusion to extract object position using OS1 LiDAR and RealSense camera.</li>
+                                <li>Implemented 3D-2D transformation on LiDAR points and compared with YOLOv4 bounding box coordinates for the best candidate.</li>
+                            </ul> 
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2022 - Present</span></div>
+                    </div>
+                    <p></p>
+                    <p></p>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Automated Dish Arranger Robot</h3>
+                            <div class="subheading mb-3" onclick="window.location=' https://lnkd.in/gu4WZ8DJ';"><u>Website Link</u></div>
+                            <ul>
+                                <li>Performed YOLOv4 camera object detection and incorporated depth parameters from RealSense camera to obtain spatial coordinates using stereo homography and image reconstruction techniques.</li>
+                                <li>Transformed coordinates from camera frame to Sawyer (Robot Base) frame using AR tags and executed path planning with specified constraints applied to end effector for pick and place operation.</li>
+                            </ul> 
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2022 - Dec 2022</span></div>
+                    </div>
+                    <p></p>
+                    <p></p>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Precise Path Following using a Model Predictive Control</h3>
+                            <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Cricket-Player-Image-Classsifier-Face-Detection-along-with-resemblance-to-the-cricket-player';"><u>Code</u></div>
+                            <ul>
+                                <li>Developed an MPC controller for an autonomous rover in a solar farm and deliver solar panels and tools from the warehouse to piers</li>
+                                <li>Defined the input and state constraints followed by trajectory modelling for setting up the environment. Executed CFTOC formulation followed by MPC formulation incorporating PYOMO modules based out of the frenet coordinates</li>
+                            </ul> 
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
+                    </div>
+                    <p></p>
+                    <p></p>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Cricket Player Image Classifier Face Detection with Resemblance to Player.</h3>
                             <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Cricket-Player-Image-Classsifier-Face-Detection-along-with-resemblance-to-the-cricket-player';"><u>Code</u></div>
                             <ul>
@@ -221,6 +283,8 @@
                             <h3 class="mb-0">Driver Drowsiness Detection</h3>
                             <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Driver-Drowsiness-Detector';"><u>Code</u></div>
                             <ul>
+                                <li>Developed a driver drowsiness detection algorithm incorporating the concepts of eye aspect ratio    
+                                </li>
 
                             </ul> 
                         </div>
@@ -229,7 +293,31 @@
                 </div>
             </section>
         </div>
-        
+        <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                 <h2 class="mb-5">Research Experience
+                 </h2>
+                 <div class="d-flex flex-column flex-md-row justify-content-between">
+                     <div class="d-flex flex-column flex-md-row justify-content-between">
+                         <div class="flex-grow-1">
+                             <h3 class="mb-0">Autonomous Off-road Rover </h3>
+                             <div class="subheading mb-3"><u></u></div>
+                             <ul>
+                                 <li>Developed ROS package for camera-lidar sensor fusion to extract object position using OS1 LiDAR and RealSense camera.</li>
+                                 <li>Implemented 3D-2D transformation on LiDAR points and compared with YOLOv4 bounding box coordinates for the best candidate. </li>
+                                 <li>Devised a dataset of various recordings of emergency sirens from sources like AudioSet in .wav format with a 16KHZ sampling rate</li>
+                                 <li>Executed an ANN model containing 12 nodes followed by a ReLU activation layer, the hidden layer composed of 24 layers followed by Sigmoid layer and ultimately 1 node in the output layer was present</li>
+                                 <li>Web scraped data using the OIDv4 toolkit, split into 700 training and 300 validation images and utilized annotation software (LabelImg) for new dataset. Evaluated the best CNN detector and feature extractor - YOLOv4 model and executed after tuning hyperparameters.</li>
+                             </ul> 
+                         </div>
+                         <div class="flex-shrink-0"><span class="text-primary">Sep 2022 - Current </span></div>
+                     </div>
+                     <p></p>
+                     <p></p>
+                    </div>
+                </div>
+            </section>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
