--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
                     </h1>
                     <div class="subheading mb-5">
                         +1 510 - 994 6106 | 
-                        <a href="mailto:jayantvegito@gmail.com">jayantvegito@gmail.com</a>
+                        <a href="mailto:jayant_kumar_14@berkeley.edu">jayant_kumar_14@berkeley.edu</a>
+                        <a href="mailto:jayantvegito@gmail.com">| jayantvegito@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a senior undergrad with a major in Mechanical engineering and have an interest in unlocking programming applications 
-                        of Machine Learning, Computer Vision and Deep Learning. I'm a determined, consistent learner and enjoy working in a team 
-                        with dreams to explore positive socioeconomic developments with my knowledge and skills.</p>
+                    <p class="lead mb-5">I am a graduate student pursuing an MEng in Mechanical Engineering (Controls of Robotic and Autonomous Systems) at the University of California, Berkeley (2022 - present). I'm a determined, consistent learner and enjoy working in a team with dreams to explore positive socio-economic developments with my knowledge and skills. I'm a passionate engineer with an interest in unlocking programming applications of Robotics Software, Deep Learning, Machine Learning, and Computer Vision. </p>
                     <div class="butn">
                         <a href="https://drive.google.com/file/d/1u-3SZ8S36PrO-joGzJYAhJ-L36R-455h/view?usp=share_link"><button>CV</button></a>   
                     </div>
@@ -65,6 +64,29 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <img src="imgs\UC-Berkeley-Symbol.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
+                            <h3 class="mb-0">University of California Berkeley</h3>
+                            <div class="subheading mb-3">MEng in Mechanical Engineering (Control of Robotic & Autonomous Systems)| CGPA: 3.53</div>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <div>University Coursework</div>
+                            <p></p>
+                            <ul>
+                                <li>MECENG C231 A: Experiential Advanced Control Design I</li>
+                                <li>MECENG C231 B: Experiential Advanced Control Design II</li>
+                                <li>MECENG 206A: Introduction to Robotics</li>
+                                <li>MECENG 236C: Vehicle Dynamics & Controls</li>
+                                <li>MECENG 292B: Statistics and Data Science for Engineers</li>
+                                <li>ENGIN 295: Communication for Engineering Leaders</li>
+                                <li>ENGIN 270C: Teaming and Project Management</li>
+                            </ul>
+                            <div></div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - May 2023</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <img src="imgs\DTU.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
@@ -84,31 +106,9 @@
                             <div></div>
                             <p>Awards and Honors</p>
                             <ul>
-                                <li>Scholarship awarded for securing Rank 1 in the batch (2019)</li>
+                                <li>Scholarship awarded for academic excellence for 4 semesters</li>
+                                <li>Winner, Urban Concept Gasoline Vehicle - SHELL Eco-Marathon</li>
                             </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2022</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <img src="imgs\UC-Berkeley-Symbol.png"  width="64" height="58" align="left" style = "padding-right: 10px;"/></img>
-                            <h3 class="mb-0">Delhi Technological University</h3>
-                            <div class="subheading mb-3">MEng in Mechanical Engineering (Control of Robotic & Autonomous Systems)| CGPA: 3.53</div>
-                            <p></p>
-                            <p></p>
-                            <p></p>
-                            <div>University Coursework</div>
-                            <p></p>
-                            <ul>
-                                <li>MECENG C231 A: Experiential Advanced Control Design I</li>
-                                <li>MECENG C231 B: Experiential Advanced Control Design II</li>
-                                <li>MECENG 206A: Introduction to Robotics</li>
-                                <li>MECENG 236C: Vehicle Dynamics & Controls</li>
-                                <li>MECENG 292B: Statistics and Data Science for Engineers</li>
-                                <li>ENGIN 295: Communication for Engineering Leaders</li>
-                                <li>ENGIN 270C: Teaming and Project Management</li>
-                            </ul>
-                            <div></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2022</span></div>
                     </div>
@@ -244,8 +244,8 @@
                             <h3 class="mb-0">Vehicle Registration Plate Detection using Optical Character Recognition</h3>
                             <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Vehicle-Registration-Plate-Detection_YOLOv4';"><u>Code</u></div>
                             <ul>
-                                <li>Web scraped data using the OIDv4 toolkit and split the dataset into 700 training images and 300 validation images along with their annotations in .txt format. </li>
-                                <li>Executed the model using YOLOv4 and enhanced it through hyperparameter tuning and showcased the results by detecting and recognizing characters in images. </li>
+                                <li>Web scraped data using the OIDv4 toolkit and split the dataset into 700 training images and 300 validation images along with their annotations in .txt format</li>
+                                <li>Executed the model using YOLOv4 and enhanced it through hyperparameter tuning and showcased the results by detecting and recognizing characters in images</li>
                             </ul> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021</span></div>
@@ -283,7 +283,7 @@
                             <h3 class="mb-0">Driver Drowsiness Detection</h3>
                             <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Driver-Drowsiness-Detector';"><u>Code</u></div>
                             <ul>
-                                <li>Developed a driver drowsiness detection algorithm incorporating the concepts of eye aspect ratio    
+                                <li>Developed a driver drowsiness detection algorithm incorporating the concepts of eye aspect ratio with a 0.25 thershold utilizing libraries like OpenCv and Dlib
                                 </li>
 
                             </ul> 
@@ -303,11 +303,11 @@
                              <h3 class="mb-0">Autonomous Off-road Rover </h3>
                              <div class="subheading mb-3"><u></u></div>
                              <ul>
-                                 <li>Developed ROS package for camera-lidar sensor fusion to extract object position using OS1 LiDAR and RealSense camera.</li>
-                                 <li>Implemented 3D-2D transformation on LiDAR points and compared with YOLOv4 bounding box coordinates for the best candidate. </li>
+                                 <li>Developed ROS package for camera-lidar sensor fusion to extract object position using OS1 LiDAR and RealSense camera</li>
+                                 <li>Implemented 3D-2D transformation on LiDAR points and compared with YOLOv4 bounding box coordinates for the best candidate</li>
                                  <li>Devised a dataset of various recordings of emergency sirens from sources like AudioSet in .wav format with a 16KHZ sampling rate</li>
                                  <li>Executed an ANN model containing 12 nodes followed by a ReLU activation layer, the hidden layer composed of 24 layers followed by Sigmoid layer and ultimately 1 node in the output layer was present</li>
-                                 <li>Web scraped data using the OIDv4 toolkit, split into 700 training and 300 validation images and utilized annotation software (LabelImg) for new dataset. Evaluated the best CNN detector and feature extractor - YOLOv4 model and executed after tuning hyperparameters.</li>
+                                 <li>Web scraped data using the OIDv4 toolkit, split into 700 training and 300 validation images and utilized annotation software (LabelImg) for new dataset. Evaluated the best CNN detector and feature extractor - YOLOv4 model and executed after tuning hyperparameters</li>
                              </ul> 
                          </div>
                          <div class="flex-shrink-0"><span class="text-primary">Sep 2022 - Current </span></div>
