--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cricket Player Image Classifier Face Detection with Resemblance to Player.</h3>
+                            <div class="subheading mb-3" onclick="window.location='https://github.com/Jayant1408/Cricket-Player-Image-Classsifier-Face-Detection-along-with-resemblance-to-the-cricket-player';"><u>Code</u></div>
                             <ul>
                                 <li>Classified cricket players using transfer learning (VGG16 model), utilizing the model for face detection and showing resemblance to cricket players</li>
                             </ul> 
